Merged revisions 67840 via svnmerge from svn+ssh://pythondev@svn.python.org/python/branches/py3k

........
  r67840 | antoine.pitrou | 2008-12-18 18:08:32 +0100 (jeu., 18 déc. 2008) | 3 lines

  Issue #4583: crash after resizing an array.array which has buffer exports.
........